// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render EntryItem correctly with title 1`] = `
<div>
  <button
    className="entry-item"
    onClick={[Function]}
  >
    <div>
      <h1
        className="entry-item__date"
      >
        01 Jan 1970 00:59
      </h1>
    </div>
    <h1
      className="entry-item__title"
    >
      title
    </h1>
    <div
      className="entry-item__text"
    >
      This is another entry
    </div>
  </button>
  <Connect(EntryModal)
    canEdit={true}
    closeModal={[Function]}
    onRemove={[Function]}
    onSubmit={[Function]}
    showModal={false}
  />
</div>
`;

exports[`should render EntryItem correctly without title 1`] = `
<div>
  <button
    className="entry-item"
    onClick={[Function]}
  >
    <div>
      <h1
        className="entry-item__date"
      >
        01 Jan 1970 01:00
      </h1>
    </div>
    <div
      className="entry-item__text"
    >
      This is an entry
    </div>
  </button>
  <Connect(EntryModal)
    canEdit={true}
    closeModal={[Function]}
    onRemove={[Function]}
    onSubmit={[Function]}
    showModal={false}
  />
</div>
`;
